Sticky element inside another sticky element does not redraw properly on scroll https://bugs.webkit.org/show_bug.cgi?id=199915 <rdar://problem/53375284>

Reviewed by Simon Fraser.

When calculating layer position for sticky nodes in the scrolling tree, take into
account situations where the sticky parents of sticky nodes don't stick (due to
sizing). This was handled properly in layout, but not in the scrolling tree, which
caused these kinds of nodes to jump around.

Source/WebCore:

Test: scrollingcoordinator/mac/nested-sticky-with-nonsticking-sticky-parent.html

* page/scrolling/ScrollingStateStickyNode.cpp:
(WebCore::ScrollingStateStickyNode::computeLayerPosition const):
(WebCore::ScrollingStateStickyNode::scrollDeltaSinceLastCommit const):
* page/scrolling/ScrollingStateStickyNode.h:
* page/scrolling/cocoa/ScrollingTreeStickyNode.mm:
(WebCore::ScrollingTreeStickyNode::computeLayerPosition const):
* page/scrolling/nicosia/ScrollingTreeStickyNode.cpp:
(WebCore::ScrollingTreeStickyNode::computeLayerPosition const):
(WebCore::ScrollingTreeStickyNode::scrollDeltaSinceLastCommit const):
* page/scrolling/nicosia/ScrollingTreeStickyNode.h:

LayoutTests:

* scrollingcoordinator/mac/nested-sticky-with-nonsticking-sticky-parent-expected.html: Added.
* scrollingcoordinator/mac/nested-sticky-with-nonsticking-sticky-parent.html: Added.


Canonical link: https://commits.webkit.org/242912@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284084 268f45cc-cd09-0410-ab3c-d52691b4dbfc