Source/WebCore/page/scrolling/ScrollingStateStickyNode.h
@@ -53,6 +53,7 @@ private:
 
     FloatPoint computeLayerPosition(const LayoutRect& viewportRect) const;
     void reconcileLayerPositionForViewportRect(const LayoutRect& viewportRect, ScrollingLayerPositionAction) final;
+    FloatSize scrollDeltaSinceLastCommit(const LayoutRect& viewportRect) const;
 
     void dumpProperties(WTF::TextStream&, ScrollingStateTreeAsTextBehavior) const final;
     OptionSet<ScrollingStateNode::Property> applicableProperties() const final;
