Source/WebCore/page/scrolling/cocoa/ScrollingTreeStickyNode.mm
@@ -69,6 +69,7 @@ void ScrollingTreeStickyNode::commitStateBeforeChildren(const ScrollingStateNode
 
 FloatPoint ScrollingTreeStickyNode::computeLayerPosition() const
 {
+    FloatSize offsetFromStickyAncestors;
     auto computeLayerPositionForScrollingNode = [&](ScrollingTreeNode& scrollingNode) {
         FloatRect constrainingRect;
         if (is<ScrollingTreeFrameScrollingNode>(scrollingNode)) {
@@ -79,6 +80,7 @@ FloatPoint ScrollingTreeStickyNode::computeLayerPosition() const
             constrainingRect = m_constraints.constrainingRectAtLastLayout();
             constrainingRect.move(overflowScrollingNode.scrollDeltaSinceLastCommit());
         }
+        constrainingRect.move(-offsetFromStickyAncestors);
         return m_constraints.layerPositionForConstrainingRect(constrainingRect);
     };
 
@@ -95,7 +97,10 @@ FloatPoint ScrollingTreeStickyNode::computeLayerPosition() const
         if (is<ScrollingTreeScrollingNode>(*ancestor))
             return computeLayerPositionForScrollingNode(*ancestor);
 
-        if (is<ScrollingTreeFixedNode>(*ancestor) || is<ScrollingTreeStickyNode>(*ancestor)) {
+        if (is<ScrollingTreeStickyNode>(*ancestor))
+            offsetFromStickyAncestors += downcast<ScrollingTreeStickyNode>(*ancestor).scrollDeltaSinceLastCommit();
+
+        if (is<ScrollingTreeFixedNode>(*ancestor)) {
             // FIXME: Do we need scrolling tree nodes at all for nested cases?
             return m_constraints.layerPositionAtLastLayout();
         }
